<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#253334"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="235dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:backgroundTint="#253334"
                android:src="@drawable/hamburger"></ImageButton>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:backgroundTint="#253334"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/hhome"></ImageButton>

            <Button
                android:id="@+id/exitToMenu"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:backgroundTint="#253334"
                android:text="exit"
                android:textSize="16dp"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/profpic"></ImageView>

            <TextView
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/a10"
                android:gravity="center"
                android:text="@string/Emil"
                android:textColor="@color/white"
                android:textSize="30dp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/editPhoto4"
                        android:layout_width="170dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#253334"
                        android:src="@drawable/rec1"
                        app:cornerRadius="10dp"></ImageButton>

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/a2"
                        android:text="@string/time1"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:translationX="15dp"></TextView>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/editPhoto3"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#253334"
                    android:foreground="@drawable/rec2"
                    app:cornerRadius="10dp">

                </ImageButton>
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/a2"
                        android:text="@string/time2"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:translationX="15dp">

                    </TextView>
                </FrameLayout>
                <Button
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#6bae73"
                    android:text="@string/plus"
                    android:textSize="30dp"
                    app:cornerRadius="10dp">

                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/editPhoto2"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#253334"
                    android:foreground="@drawable/rec3"
                    android:text="@string/time3"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp">

                </ImageButton>
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/a2"
                        android:text="@string/time3"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:translationX="15dp">

                    </TextView>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center">
                <ImageButton
                    android:id="@+id/editPhoto1"
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#253334"
                    android:foreground="@drawable/rec4">

                </ImageButton>
                    <TextView

                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/a2"
                        android:text="@string/time4"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:translationX="15dp">

                    </TextView>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:gravity="center">

            <ImageButton

                android:background="#253334"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/hhome">

            </ImageButton>
            <ImageButton
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="#253334"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/nnav">
            </ImageButton>
            <ImageButton
                android:background="#253334"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/pprofile">
            </ImageButton>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>